--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
               "workbench.colorCustomizations": {
                             "titleBar.activeBackground": "#e71ac1"
-              }
+              },
+              "spellchecker.ignoreWordsList": [
+                            "Estudos",
+                            "esta",
+                            "leitura",
+                            "praticar"
+              ]
 }
