--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
                             "Estudos",
                             "esta",
                             "leitura",
-                            "praticar"
+                            "praticar",
+                            "Treinamento"
               ]
 }
